--- a/Auth.SSODemo/Auth.SSODemo/Web.config
+++ b/Auth.SSODemo/Auth.SSODemo/Web.config
@@ -20,7 +20,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
